Adding info and improving css

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
   </head>
+  <header id="test">
+    To do List
+  </header>
+  <p id="para">
+    To add tasks with the add button, and delete them by hovering your cursor
+    over the task, and clicking it.
+  </p>
+
   <body>
     <div id="container"></div>
   </body>
